hphp/hack/test/typecheck/variadic_args12.php.exp
File "variadic_args12.php", line 3, characters 13-15:
A variadic parameter may not be passed by reference. (Parsing[1002])
