hphp/hack/test/typecheck/variadic_args12.php
<?hh

function f(&...$args): void {}
